--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: brijeshb42@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A blog about Life, Universe and Coding.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site
+url: "http://bitwiser.in" # the base hostname & protocol for your site
 twitter_username: brijeshb42
 github_username:  brijeshb42
 
