added new project

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,9 @@
 - name: Kattappa
   url: /kattappa/
 
+- name: Jekyll Read
+  url: /Jekyll-Read/
+
 - name: Bitwiser-Material
   url: /bitwiser-material/
 
